# flask-poet

./: README.md  devnotes.txt
blind-cupid/: alembic.ini  api.py  cupid.db  pyproject.toml
blind-cupid/controller/: summary_controller.py  user_search_controller.py
blind-cupid/migrations/: env.py
blind-cupid/migrations/versions/: 40b0acfda2b5_create_user_table.py  a7f9af52c391_add_a_column_to_user.py
blind-cupid/model/: models.py
blind-cupid/model/user/: user_repository.py
blind-cupid/routes/: routes.py
blind-cupid/static/: index.html
blind-cupid/utils/: url_argument_validator.py
