[project]
name = "blind-cupid"
version = "0.1.0"
description = ""
authors = [
    {name = "Daniel Amorim",email = "danielamorimbessa@hotmail.com"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flask (>=3.1.0,<4.0.0)",
    "pytest (>=8.3.4,<9.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
